Working on boston data set project

--- a/scratch/model_selection.ipynb
+++ b/scratch/model_selection.ipynb
@@ -11,20 +11,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#kf = KFold(12,3)\n",
-    "#can also add a shuffle param"
+    "#can also add a shuffle param\n",
+    "#k-fold prevents overfitting"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Steps for choosing a model:\n",
+    "* Divide data into 3 sets - training, cross validation, and testing\n",
+    "* Train the models using the training sets\n",
+    "* Score the models using the cross validation set\n",
+    "* Check the models using the testing set\n",
+    "A grid search can be used if there are a lot of parameter (hyper params)\n",
+    "\n",
+    "Example follows from Lesson 10.9:\n",
+    "```python\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "parameters = {'kernel':['poly', 'rbf'],'C':[0.1, 1, 10]}\n",
+    "\n",
+    "from sklearn.metrics import make_scorer\n",
+    "from sklearn.metrics import f1_score\n",
+    "scorer = make_scorer(f1_score)\n",
+    "\n",
+    "# Create the object.\n",
+    "grid_obj = GridSearchCV(clf, parameters, scoring=scorer)\n",
+    "# Fit the data\n",
+    "grid_fit = grid_obj.fit(X, y)\n",
+    "\n",
+    "best_clf = grid_fit.best_estimator_\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
