--- a/scratch/14-perceptron-algorithm.ipynb
+++ b/scratch/14-perceptron-algorithm.ipynb
@@ -10,6 +10,429 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The AND perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      "Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "      0          0                  -1.5                    0          Yes\n",
+      "      0          1                  -0.5                    0          Yes\n",
+      "      1          0                  -0.5                    0          Yes\n",
+      "      1          1                   0.5                    1          Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# TODO: Set weight1, weight2, and bias\n",
+    "weight1 = 1.0\n",
+    "weight2 = 1.0\n",
+    "bias = -1.5\n",
+    "\n",
+    "# Inputs and outputs for the AND Perceptron\n",
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [False, False, False, True]\n",
+    "outputs = []\n",
+    "\n",
+    "# Generate and check output\n",
+    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
+    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
+    "    output = int(linear_combination >= 0)\n",
+    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
+    "    outputs.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
+    "\n",
+    "# Print output\n",
+    "num_wrong = len([output[4] for output in outputs if output[4] == 'No'])\n",
+    "output_frame = pd.DataFrame(outputs, columns=['Input 1', '  Input 2', '  Linear Combination', '  Activation Output', '  Is Correct'])\n",
+    "if not num_wrong:\n",
+    "    print('Nice!  You got it all correct.\\n')\n",
+    "else:\n",
+    "    print('You got {} wrong.  Keep trying!\\n'.format(num_wrong))\n",
+    "print(output_frame.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The OR Perceptron: Modifying Bias"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      "Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "      0          0                  -0.5                    0          Yes\n",
+      "      0          1                   0.5                    1          Yes\n",
+      "      1          0                   0.5                    1          Yes\n",
+      "      1          1                   1.5                    1          Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# TODO: Set weight1, weight2, and bias\n",
+    "weight1 = 1.0\n",
+    "weight2 = 1.0\n",
+    "bias = -0.5\n",
+    "\n",
+    "# Inputs and outputs for the OR Perceptron\n",
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [False, True, True, True]\n",
+    "outputs = []\n",
+    "\n",
+    "# Generate and check output\n",
+    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
+    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
+    "    output = int(linear_combination >= 0)\n",
+    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
+    "    outputs.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
+    "\n",
+    "# Print output\n",
+    "num_wrong = len([output[4] for output in outputs if output[4] == 'No'])\n",
+    "output_frame = pd.DataFrame(outputs, columns=['Input 1', '  Input 2', '  Linear Combination', '  Activation Output', '  Is Correct'])\n",
+    "if not num_wrong:\n",
+    "    print('Nice!  You got it all correct.\\n')\n",
+    "else:\n",
+    "    print('You got {} wrong.  Keep trying!\\n'.format(num_wrong))\n",
+    "print(output_frame.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The OR Perceptron: Modifying Weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      "Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "      0          0                  -1.5                    0          Yes\n",
+      "      0          1                   0.5                    1          Yes\n",
+      "      1          0                   0.5                    1          Yes\n",
+      "      1          1                   2.5                    1          Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# TODO: Set weight1, weight2, and bias\n",
+    "weight1 = 2.0\n",
+    "weight2 = 2.0\n",
+    "bias = -1.5\n",
+    "\n",
+    "# Inputs and outputs for the OR Perceptron\n",
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [False, True, True, True]\n",
+    "outputs = []\n",
+    "\n",
+    "# Generate and check output\n",
+    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
+    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
+    "    output = int(linear_combination >= 0)\n",
+    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
+    "    outputs.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
+    "\n",
+    "# Print output\n",
+    "num_wrong = len([output[4] for output in outputs if output[4] == 'No'])\n",
+    "output_frame = pd.DataFrame(outputs, columns=['Input 1', '  Input 2', '  Linear Combination', '  Activation Output', '  Is Correct'])\n",
+    "if not num_wrong:\n",
+    "    print('Nice!  You got it all correct.\\n')\n",
+    "else:\n",
+    "    print('You got {} wrong.  Keep trying!\\n'.format(num_wrong))\n",
+    "print(output_frame.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The NOT Perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nice!  You got it all correct.\n",
+      "\n",
+      "Input 1    Input 2    Linear Combination    Activation Output   Is Correct\n",
+      "      0          0                   1.0                    1          Yes\n",
+      "      0          1                  -1.0                    0          Yes\n",
+      "      1          0                   1.0                    1          Yes\n",
+      "      1          1                  -1.0                    0          Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# TODO: Set weight1, weight2, and bias\n",
+    "weight1 = 0.0\n",
+    "weight2 = -2.0\n",
+    "bias = 1.0\n",
+    "\n",
+    "\n",
+    "# DON'T CHANGE ANYTHING BELOW\n",
+    "# Inputs and outputs\n",
+    "test_inputs = [(0, 0), (0, 1), (1, 0), (1, 1)]\n",
+    "correct_outputs = [True, False, True, False]\n",
+    "outputs = []\n",
+    "\n",
+    "# Generate and check output\n",
+    "for test_input, correct_output in zip(test_inputs, correct_outputs):\n",
+    "    linear_combination = weight1 * test_input[0] + weight2 * test_input[1] + bias\n",
+    "    output = int(linear_combination >= 0)\n",
+    "    is_correct_string = 'Yes' if output == correct_output else 'No'\n",
+    "    outputs.append([test_input[0], test_input[1], linear_combination, output, is_correct_string])\n",
+    "\n",
+    "# Print output\n",
+    "num_wrong = len([output[4] for output in outputs if output[4] == 'No'])\n",
+    "output_frame = pd.DataFrame(outputs, columns=['Input 1', '  Input 2', '  Linear Combination', '  Activation Output', '  Is Correct'])\n",
+    "if not num_wrong:\n",
+    "    print('Nice!  You got it all correct.\\n')\n",
+    "else:\n",
+    "    print('You got {} wrong.  Keep trying!\\n'.format(num_wrong))\n",
+    "print(output_frame.to_string(index=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.700000000000001"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = []\n",
+    "for c in [3,4,-10]:\n",
+    "    x.append(c + 0.1)\n",
+    "    \n",
+    "sum(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# Setting the random seed, feel free to change it and see different solutions.\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "def stepFunction(t):\n",
+    "    if t >= 0:\n",
+    "        return 1\n",
+    "    return 0\n",
+    "\n",
+    "def prediction(X, W, b):\n",
+    "    return stepFunction((np.matmul(X,W)+b)[0])\n",
+    "\n",
+    "# TODO: Fill in the code below to implement the perceptron trick.\n",
+    "# The function should receive as inputs the data X, the labels y,\n",
+    "# the weights W (as an array), and the bias b,\n",
+    "# update the weights and bias W, b, according to the perceptron algorithm,\n",
+    "# and return W and b.\n",
+    "def perceptronStep(X, y, W, b, learn_rate = 0.01):\n",
+    "    # Fill in code\n",
+    "    return W, b\n",
+    "    \n",
+    "# This function runs the perceptron algorithm repeatedly on the dataset,\n",
+    "# and returns a few of the boundary lines obtained in the iterations,\n",
+    "# for plotting purposes.\n",
+    "# Feel free to play with the learning rate and the num_epochs,\n",
+    "# and see your results plotted below.\n",
+    "def trainPerceptronAlgorithm(X, y, learn_rate = 0.01, num_epochs = 25):\n",
+    "    x_min, x_max = min(X.T[0]), max(X.T[0])\n",
+    "    y_min, y_max = min(X.T[1]), max(X.T[1])\n",
+    "    W = np.array(np.random.rand(2,1))\n",
+    "    b = np.random.rand(1)[0] + x_max\n",
+    "    # These are the solution lines that get plotted below.\n",
+    "    boundary_lines = []\n",
+    "    for i in range(num_epochs):\n",
+    "        # In each epoch, we apply the perceptron step.\n",
+    "        W, b = perceptronStep(X, y, W, b, learn_rate)\n",
+    "        boundary_lines.append((-W[0]/W[1], -b/W[1]))\n",
+    "    return boundary_lines\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot([1, 2, 3], [2, 4, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 6, 7])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.add([1, 2, 3], [2, 4, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 4, 6])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.multiply([1, 2, 3], 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perceptronStep(X, y, W, b, learn_rate = 0.01):\n",
+    "    for i in range(len(X)):\n",
+    "        y_hat = prediction(X[i],W,b)\n",
+    "        if y_hat != y[i]:\n",
+    "            r = np.sign(y[i] - y_hat) * learn_rate\n",
+    "            W[0] += X[i][0]*r\n",
+    "            W[1] += X[i][1]*r\n",
+    "            b += r\n",
+    "    return W, b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = [[0.37454012], [0.95071431]]\n",
+    "Xi = [0.5533, 1.]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.37454012], [0.95071431], 0.5533, 1.0]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W + Xi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.73199394,  0.59865848])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(np.random.rand(2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -33,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
