Finished finding donors project

--- a/scratch/basics.ipynb
+++ b/scratch/basics.ipynb
@@ -260,11 +260,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Accuracy: How often is the classifier correct? Number of correct predictions to total number of predictions.\n",
+    "\n",
+    "False Positive: It _is_ negative, but you falsely classified it as positive. In other words, you made a false accusation.\n",
+    "\n",
+    "False Negative: It _is_ positive, but you falsely classified it as negative. In other words, you did not find it when you should have. You missed something.\n",
+    "\n",
+    "$$ accuracy = \\frac{correct}{N_{samples}}  $$\n",
+    "\n",
+    "Precision: What proportion of items we classified as X are actually X.\n",
+    "\n",
+    "$$ precision = \\frac{truepos}{truepos + falsepos}  $$\n",
+    "\n",
+    "Recall: What proportion of items that are actually X are classified as X.\n",
+    "\n",
+    "$$ recall = \\frac{truepos}{truepos + falseneg}  $$\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -290,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
